objects/Organisation_Structure_Item__c.object
<CustomObject>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Organisation Structure Items</relationshipLabel>
        <relationshipName>Organisation_Structure_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Organisation_Structure_Item__c</referenceTo>
        <relationshipLabel>Organisation Structure Items</relationshipLabel>
        <relationshipName>Organisation_Structure_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Organisation Structure Item</label>
    <nameField>
        <displayFormat>OSI{00000}</displayFormat>
        <label>Organisation Structure Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Structure Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>